syntax = "proto3";
package p_common;

import "google/protobuf/any.proto";


enum RequestType{
    ReqType_Default = 0;
    ReqType_Json = 1;
}

enum StatusType{
    status_normal = 0;
    status_disabled = 1;
}

enum NoticeType{
    notice_reload = 0; //reload消息
    notice_event = 1;
}

enum RequestCode {
    //成功
    RequestCodeSuccess          = 0; 
	RequestCodeErrorVerifi      = 1; //验证错误
	RequestCodeErrorParameter   = 2; //参数错误
	RequestCodeErrorPermissions = 3; //权限错误
	RequestCodeErrorSystem      = 4; //系统错误
	RequestCodeErrorAction      = 5; //操作错误
    RequestCodeErrorSession     = 6; //session错误
}

//运营渠道
enum Operator{
    Operator_default = 0;
}

//设备
enum OsType{
    os_none = 0;
    os_android = 1;
    os_ios = 2;
}

message RequestHead{
    RequestType type = 1;
    MessageItem Request = 2;
}

message MessageItem{
    string cmd = 1;
    repeated MessageContent parameter = 2;
}

message ResponseHead{
    RequestCode code = 1;
    int32   err_code = 2;
    string  msg = 3;
    repeated MessageItem Response = 4;
    
}

message MessageContent{
    string key = 1;
    google.protobuf.Any obj = 2;
}

message IntMsg{
    int32 value = 2;
}

message IntsMsg{
    repeated int32 value = 2;
}

message StringMsg{
    string value = 2;
}
message StringsMsg{
    repeated string value = 2;
}

message RspJsonHead{
    RequestCode code = 1;
    int32   err_code = 2;
    string  msg = 3;
    string response = 4;
}

message DeviceMsg{
    OsType os_type       =1;
	string manufacturer =2;
	string model        =3;
	string mac_address   =4;
	string imei         =5;
	string imsi         =6;
	string sn           =7;
	string brand        =8;
	string android_id    =9;
	string version      =10;
    string sdk_version   =11;
    string package_name = 12;
    string package_version = 13;
    string identity = 14;
    Operator operator_id = 15;
}
 
message PageInfo{
    int32 page =1;
    int32 total =2;
    string title = 3;
    int32 type = 4;
}

message VersionItem{
    int32 id = 1; 
    OsType os_type = 2; // 设备ID 0: Android 1: IOS
    int32 app_id = 3; // 应用ID
    string package_version = 4; // 版本号
    int32 channel_id = 5; // 渠道ID
    string version_size = 6; // 版本大小
    StatusType status = 7; // 版本状态 0: 启用 1: 停用
    string download_url = 8; // 下载地址URL
    int32 type = 9; // 0: 选择更新 1: 强制更新
    int32 update_id = 10; // 更新ID
    string update_title = 11; // 更新标题
    string update_message = 12; // 更新内容
    string create_time = 13; // 创建时间
    string update_time = 14; // 更新时间
    string file_domain = 15; //文件域名
  }
  message VersionList{
    repeated VersionItem items = 1;
  }

  //通知消息
  message NoticeMsg{
    NoticeType notice_type = 1;
    google.protobuf.Any obj = 2;
    string event = 3;
    int32 service_type = 4;
  }